refactor : 남은 삼항연산자를 조건문으로 변경
- main 22 곳과 test 9 곳의 삼항연산자를 조건문이나 추출한 메서드로 바꾼다
- 저장소 안에 이미 쓰던 Objects.requireNonNullElse 로 대체할 수 있는 자리는 그것을 쓴다
- 두 번 같은 모양으로 반복되던 피드백 commit 판정을 메서드 하나로 모은다

Ref: #264